<resources>
    <!-- App Resources -->
    <string name="title_app_name">ComChat</string>

    <!-- Organized by top level nav fragment in order then alphabetically -->

    <!-- Start Fragment -->
    <string name="title_start">Start</string>
    <string name="button_start_login">Login</string>
    <string name="button_start_register">Register</string>

    <!-- Login Fragment -->
    <string name="title_login">Login</string>
    <string name="edit_text_login_email">Email</string>
    <string name="edit_text_login_password">Password</string>
    <string name="button_login_sign_in">Sign In</string>
    <string name="button_login_password_recovery">Forgot Password</string>
    <string name="image_login_content">App logo for login</string>
    <string name="switch_sign_in">Stay Signed in</string>

    <!-- Register Fragment -->
    <string name="title_register">Register</string>
    <string name="button_register_first_name">First Name</string>
    <string name="button_register_last_name">Last Name</string>
    <string name="edit_text_register_email">Email</string>
    <string name="edit_text_register_nickname">Nickname</string>
    <string name="edit_text_register_password">Password</string>
    <string name="edit_text_register_password_retype">Retype Password</string>
    <string name="button_register_register">Accept</string>
    <string name="text_register_status">Status</string>
    <string name="text_register_success">Register successfully. Tap anywhere to turn off this message.</string>
    <string name="text_register_fail">Register fail. Tap anywhere to turn off this message.</string>

    <!-- Password Recovery Fragment -->
    <!-- Email section -->
    <string name="text_password_recovery_instruction">Instructions</string>
    <string name="text_password_recovery_instruction_one">1. Enter your account email</string>
    <string name="text_password_recovery_instruction_two"> 2. Check your email for a PIN code</string>
    <string name="text_password_recovery_instruction_three"> 3. Use your PIN code on the next page</string>
    <string name="edit_text_password_recovery_email">Email</string>
    <string name="button_password_recovery_send_pin">Send PIN</string>
    <!-- Update password section -->
    <string name="edit_text_password_recovery_pin">PIN code</string>
    <string name="edit_Text_password_recovery_new_password">New password</string>
    <string name="edit_text_password_recovery_password_retype">Retype password</string>
    <string name="button_password_recovery_accept">Accept</string>
    <!-- Dialog -->
    <string name="text_recover_pw_status">Status</string>
    <string name="text_recover_pw_fail_email_check">Email not found or has not been verified. Please enter different email. Tap anywhere to turn
        off this message.</string>
    <string name="text_recover_pw_success_email_check">A PIN code has been sent to your email. Please retrieve the PIN
        code to complete password recovery process. Tap anywhere to turn off this message.</string>
    <string name="text_recover_pw_success_process">Your password has been reset successfully. Tap anywhere to turn off this message.</string>
    <string name="text_recover_pw_fail_process">Password recovery fail. Please recheck your PIN code.</string>

    <!-- Home Fragment -->
    <string name="title_home">Home</string>
    <string name="content_home_profile_avatar">Profile image.</string>
    <string name="text_home_location">Location</string>
    <string name="text_home_hello">Hi</string>
    <string name="text_home_email">Email</string>
    <string name="text_home_welcome">Welcome back!</string>
    <string name="text_home_weather_description">Description</string>
    <string name="text_home_weather_date">Date</string>
    <string name="text_home_weather_temp">0&#xb0;</string>
    <string name="content_home_weather_image">Current weather image.</string>
    <string name="text_home_notification_sender">Sender</string>
    <string name="text_home_notification_message">Message</string>
    <string name="text_home_notification_time">Time</string>
    <string name="text_home_notification_date">Date</string>
    <string name="text_home_notification_display">Your most recent notification will appear here.</string>
    <string name="text_home_notification_connection_message">New connection request.</string>


    <!-- Bottom navigation menu -->
    <string name="item_nav_home">Home</string>
    <string name="item_nav_weather">Weather</string>
    <string name="item_nav_connection">Connection</string>
    <string name="item_nav_chat">Chat</string>

    <!-- Settings Fragment -->
    <string name="title_settings">User Settings</string>
    <string name="text_settings_default">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="theme_change_settings">Change Color Theme</string>
    <string name="item_menu_profile">Profile Settings</string>
    <string name="item_menu_change_theme">Change Theme</string>
    <string name="item_menu_change_theme_accept">Accept</string>
    <string name="item_menu_logout">Logout</string>
    <string name="dark_theme_title">Dark Theme</string>
    <string name="dark_theme_info">Toggle dark mode for your theme</string>
    <string name="dark_theme_status">Status</string>


    <!-- Theme Fragment -->
    <string name="title_theme">Theme Color Settings</string>
    <string name="radio_default_title">Default Color Theme</string>
    <string name="radio_grey_title">Blue/Grey Color Theme</string>
    <string name="radio_red_title">Red/Black Color Theme</string>
    <string name="theme_default">Default theme</string>
    <string name="theme_red">Red theme</string>
    <string name="theme_grey">Grey theme</string>


    <!-- Weather Fragment -->
    <string name="title_weather">Weather</string>
    <string name="text_weather_location">Location</string>
    <string name="text_weather_description">Description</string>
    <string name="text_weather_temp">0&#xb0;</string>
    <string name="image_weather_hour_content">Image representing hourly weather</string>
    <string name="text_weather_hour_time">Time</string>
    <string name="text_weather_hour_temp">0&#xb0;</string>
    <string name="text_weather_day">Day</string>
    <string name="image_weather_day_content">Image representing daily weather</string>
    <string name="text_weather_day_temp">0&#xb0;</string>

    <string name="title_location">Set Location</string>
    <string name="button_location_set">Set Location</string>
    <string name="button_location_current">Use Current</string>
    <string name="action_location_search">Search</string>
    <string name="action_location_set">Location</string>


    <!-- Connections Fragment -->
    <string name="title_connection">Connection</string>

    <!-- Connections Card Fragment -->
    <string name="card_message_description">message connection in card</string>
    <string name="card_settings_description">manage settings</string>
    <string name="card_avatar_description">avatar for user</string>
    <string name="connection_tab_existing">Existing</string>
    <string name="connection_tab_incoming">Incoming</string>
    <string name="connection_tab_outgoing">Outgoing</string>
    <string name="connection_tab_suggested">Suggested</string>
    <string name="connection_search_ok">Ok</string>
    <string name="connection_card_first_name">First name</string>
    <string name="connection_card_last_name">Last name</string>
    <string name="connection_card_email">temporaryemail@uw.edu</string>


    <!-- Profile Fragment -->
    <string name="nickname_profile">NickName</string>
    <string name="name_profile">Sample Name</string>
    <string name="email_profile">Email:</string>
    <string name="connect_status_profile">Connect Status</string>
    <string name="username_profile">Username:</string>
    <string name="title_profile">Profile</string>
    <string name="avatar_profile_description">Avatar for profile</string>


    <!-- ChatMessage List Fragment -->
    <string name="title_chat_list">Chat</string>
    <string name="item_menu_chat_list_add">Add member</string>
    <string name="item_menu_chat_list_delete">Remove member</string>
    <string name="item_menu_chat_list_accept">Accept</string>
    <string name="item_menu_chat_list_decline">Decline</string>
    <string name="item_menu_chat_list_delete_room">Delete room</string>

    <!-- ChatMessage Card Fragment -->
    <string name="text_chat_name">Name</string>
    <string name="text_chat_date">Date</string>
    <string name="text_chat_message">Message</string>


    <!-- Message Page Fragment -->
    <string name="title_message_page">Conversation</string>
    <string name="text_message_page_default">Message</string>
    <string name="text_message_page_delete_room">Are you sure want to delete this room? This will remove all chat in the room along with its members.</string>
    <string name="text_message_page_default_choice">None</string>
    <string name="text_message_page_remove_fail">Remove unsuccessfully. Please try again. Tap anywhere to close this message. </string>

    <!-- Create Fragment -->
    <string name="title_create">Message</string>
    <string name="action_search">Search</string>
    <string name="action_create_add">Add Contact</string>
    <string name="text_create_chat_name">Group Name</string>
    <string name="button_create_accept">Accept</string>
    <string name="checkBox_create_message">I want to create a direct message instead.</string>
    <string name="text_create_chat_with">Direct message to:</string>

    <!-- URL -->
    <string name="base_url">https://comchat-backend.herokuapp.com/</string>
    <string name="connections_url">https://comchat-backend.herokuapp.com/connections/</string>
    <string name="title_activity_maps">Map</string>

    <!-- Shared preferences -->
    <string name="keys_shared_prefs">edu.uw.comchat.STORAGE</string>
    <string name="keys_jwt">JWT</string>
    <string name="keys_location_type">Location Type</string>
    <string name="keys_zip">Zip code</string>
    <string name="keys_latitude">Latitude</string>
    <string name="keys_longitude">Longitude</string>
    <string name="keys_theme">Theme</string>
    <string name="keys_theme_dark">Dark Theme</string>
</resources>