<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.comchat.ui.home.HomeFragment"
        android:label="@string/item_nav_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.uw.comchat.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.comchat.ui.chat.ChatListFragment"
        android:label="@string/title_chat_list"
        tools:layout="@layout/fragment_chat_list" >
        <action
            android:id="@+id/action_navigation_chat_to_createFragment"
            app:destination="@id/createFragment" />
        <action
            android:id="@+id/action_navigation_chat_to_chatFragment"
            app:destination="@id/messageListFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_connection"
        android:name="edu.uw.comchat.ui.connection.ConnectionFragment"
        android:label="@string/title_connection"
        tools:layout="@layout/fragment_connection" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.comchat.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/createFragment"
        android:name="edu.uw.comchat.ui.chat.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" >
        <action
            android:id="@+id/action_createFragment_to_chatFragment"
            app:destination="@id/messageListFragment" />
    </fragment>
    <fragment
        android:id="@+id/messageListFragment"
        android:name="edu.uw.comchat.ui.chat.MessageListFragment"
        android:label="@string/title_message_list"
        tools:layout="@layout/fragment_message_list" />
</navigation>